Review findings
RISDEV-2190